# vibe-reachout

./: .editorconfig  .gitignore  .rumdl.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  cliff.toml  clippy.toml  justfile  rustfmt.toml
.cargo/: config.toml
.github/workflows/: changelog.yml  ci.yml  release.yml
specs/001-telegram-permission-hook/: clarifications.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  task-analysis.md  tasks.md
specs/001-telegram-permission-hook/checklists/: contracts.md  requirements.md
specs/001-telegram-permission-hook/contracts/: hook-io.md  ipc.md  telegram-ui.md
specs/002-code-quality-refactoring/: plan.md
src/: bot.rs  config.rs  error.rs  hook.rs  install.rs  lib.rs  main.rs  models.rs
src/ipc/: client.rs  server.rs
src/telegram/: callback_data.rs  formatter.rs  handler.rs  keyboard.rs  mod.rs
tests/: ipc_integration.rs
