[package]
name = "vibe-reachout"
version = "2026.2.2"
edition = "2024"
rust-version = "1.93"
description = "Approve Claude Code permission prompts from your phone via Telegram"
license = "MIT"
repository = "https://github.com/alexsavio/vibe-reachout"
readme = "README.md"
keywords = ["claude-code", "telegram", "hooks", "cli", "automation"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "io-std", "signal", "time", "fs"] }
tokio-util = { version = "0.7", features = ["rt"] }
teloxide = { version = "0.17.0", default-features = false, features = ["macros", "rustls", "ctrlc_handler"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9.8"
dashmap = "6"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6.0.0"
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 2
